<resources>
    <string name="app_name">kotlin_android_project4</string>
    <string name="calculator_1_com">Calculator-1.com</string>
    <string name="_2">2</string>
    <string name="mc_mr_m_m">MC MR M- M+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="unknown">+/-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="c">C</string>
    <string name="_0">0</string>
</resources>