<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#e4f3fe"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/calculator_1_com"
        android:gravity="right"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#38788b"
        tools:ignore="RtlHardcoded" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/border"
        >


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text=""

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="56sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:id="@+id/historyTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            />
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-10dp"
        android:text="@string/mc_mr_m_m"
        android:textSize="20sp"
        />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="5"
        android:fitsSystemWindows="true"

        >

        <Button
            android:id="@+id/sevenBtn"
            android:text="@string/_7"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="5sp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            android:textSize="20sp">

        </Button>

        <Button
            android:id="@+id/eightBtn"
            android:text="@string/_8"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            >

        </Button>

        <Button
            android:id="@+id/nineBtn"
            android:text="@string/_9"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            >

        </Button>

        <Button
            android:id="@+id/plusMinusBtn"
            android:text="@string/unknown"
            android:textSize="17sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#abaaa7"
            >

        </Button>

        <Button
            android:id="@+id/forwardBtn"
            android:text="->"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#abaaa7"
            >

        </Button>

        <Button
            android:id="@+id/fourBtn"
            android:text="@string/_4"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            >

        </Button>

        <Button
            android:id="@+id/fiveBtn"
            android:text="@string/_5"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            >

        </Button>

        <Button
            android:id="@+id/sixBtn"
            android:text="@string/_6"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#6BEBEBEB"
            android:textStyle="bold"
            android:textColor="#005b82"
            >

        </Button>

        <Button
            android:id="@+id/multiplyBtn"
            android:text="@string/x"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#7c7b7d"
            >

        </Button>

        <Button
            android:id="@+id/divideBtn"
            android:text="/"
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:backgroundTint="#7c7b7d"
            >

        </Button>



    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="4"
            android:fitsSystemWindows="true"

            >

            <Button
                android:id="@+id/oneBtn"
                android:text="@string/_1"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_margin="5sp"
                android:backgroundTint="#6BEBEBEB"
                android:textStyle="bold"
                android:textColor="#005b82"
                android:textSize="20sp">

            </Button>

            <Button
                android:id="@+id/twoBtn"
                android:text="2"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#6BEBEBEB"
                android:textStyle="bold"
                android:textColor="#005b82"
                >

            </Button>

            <Button
                android:id="@+id/threeBtn"
                android:text="@string/_3"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#6BEBEBEB"
                android:textStyle="bold"
                android:textColor="#005b82"
                >

            </Button>

            <Button
                android:id="@+id/minusBtn"
                android:text="-"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#7c7b7d"
                >

            </Button>

            <Button
                android:id="@+id/CBtn"
                android:text="@string/c"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#ff0833"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                >

            </Button>

            <Button
                android:id="@+id/zeroBtn"
                android:text="@string/_0"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#6BEBEBEB"
                android:textStyle="bold"
                android:textColor="#005b82"
                >

            </Button>

            <Button
                android:id="@+id/dotBtn"
                android:text="."
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#6BEBEBEB"
                android:textStyle="bold"
                android:textColor="#005b82"
                >

            </Button>

            <Button
                android:id="@+id/plusBtn"
                android:text="+"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:backgroundTint="#7c7b7d"
                >

            </Button>

        </GridLayout>

        <Button
            android:id="@+id/equalBtn"
            android:text="="
            android:textSize="20sp"
            android:layout_margin="5sp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:backgroundTint="#0068a5"
            >

        </Button>
    </LinearLayout>

</LinearLayout>